docs: home and login text on login and register page

--- a/application/contests/view/index/index.html
+++ b/application/contests/view/index/index.html
@@ -12,10 +12,10 @@ $code_arr = array(
 <div class="container">
 	<form class="form-horizontal" action="{$target}" method="get">
 		<div class="col-sm-5" style="padding-left: 0px">
-			<input class="form-control" style="border-radius: 0px" type="text" name="keyword" value="{$keyword}" placeholder="关键字: 标题">
+			<input class="form-control" style="border-radius: 0px" type="text" name="keyword" value="{$keyword}" placeholder="{$lang.keyword}: {$lang.title}">
 		</div>
 		<div class="col-sm-2">
-			<button class="btn btn-success"> <span class="glyphicon glyphicon-search"></span> 搜索</button>
+			<button class="btn btn-success"> <span class="glyphicon glyphicon-search"></span> {$lang.search}</button>
 		</div>
 	</form>
 
