--- a/application/login/view/index/index.html
+++ b/application/login/view/index/index.html
@@ -30,8 +30,8 @@
         <input value="{$lang.login}" lay-submit lay-filter="login" style="width:100%;" type="submit">
         <hr class="hr20" >
         <p style="text-align: right">
-            <a style="color: #6c6c6c" href="/">{$lang.home}</a>
-            <a style="color: #6c6c6c" href="/register">{$lang.register}</a>
+            <a style="color: blue" href="/">{$lang.home}</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a style="color: blue" href="/register">{$lang.register}</a>
         </p>
         <p style="text-align: right">
             <a style="color: blue" href="javascript:" onclick="forgot_password();">{$lang.forgot_password}?</a>
