--- a/application/register/view/index/index.html
+++ b/application/register/view/index/index.html
@@ -36,8 +36,8 @@
         <input value="{$lang.register}" lay-submit lay-filter="register" style="width:100%;" type="submit">
         <hr class="hr20" >
         <p style="text-align: right">
-            <a style="color: #6c6c6c" href="/">Home</a>
-            <a style="color: #6c6c6c" href="/login">Login</a>
+            <a style="color: blue" href="/">{$lang.home}</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a style="color: blue" href="/login">{$lang.login}</a>
         </p>
     </form>
 </div>
