--- a/application/contests/view/index/index.html
+++ b/application/contests/view/index/index.html
@@ -15,7 +15,7 @@ $code_arr = array(
 			<input class="form-control" style="border-radius: 0px" type="text" name="keyword" value="{$keyword}" placeholder="{$lang.keyword}: {$lang.title}">
 		</div>
 		<div class="col-sm-2">
-			<button class="btn btn-success"> <span class="glyphicon glyphicon-search"></span> 搜索</button>
+			<button class="btn btn-success"> <span class="glyphicon glyphicon-search"></span> {$lang.search}</button>
 		</div>
 	</form>
 
