--- a/application/status/view/solution/show.html
+++ b/application/status/view/solution/show.html
@@ -1,4 +1,5 @@
 {extend name="extra@layout/user" /}
+{block name='navpart'}{/block}
 {block name='titlepart'}{$lang['status']} - {$lang['justoj']}{/block}
 {block name="body"}
 <div class="container">
