--- a/application/status/view/rejudge/problem.html
+++ b/application/status/view/rejudge/problem.html
@@ -1,10 +1,13 @@
 {extend name="extra@layout/user" /}
+{block name="navpart"}{/block}
 {block name='titlepart'}{$lang['status']} - {$lang['justoj']}{/block}
 {block name="body"}
 <div class="container">
+    <br>
     <div class="row">
         <span>ProblemID: {$id}</span>
     </div>
+    <br>
     <div class="row">
         <div class="span4">
             <div class="progress">
@@ -28,5 +31,5 @@
         }, 300);
     });
 </script>
-
 {/block}
+{block name="footer"}{/block}
