--- a/application/problem/view/index/index.html
+++ b/application/problem/view/index/index.html
@@ -168,7 +168,7 @@
 						<i class="fa fa-close"></i>
 					</a>
 				</button>
-				<h5 class="modal-title" id="solutionModalLabel"><a target="_blank">#<span id="solution_id"></span></a></h5>
+				<h5 class="modal-title" id="solutionModalLabel"><a target="_blank" id="solution-link">#<span id="solution_id"></span></a></h5>
 			</div>
 			<div class="modal-body">
 				<div id="info-panel">
@@ -302,6 +302,7 @@ function submit_code(){
         if ('success' == d.status) {
             console.log(d);
             $('#solution_id').html(d.data.solution_id);
+			$('#solution-link').attr('href', '/status/solution/show/solution_id/' + id);
             $('#solution_id_2').html(d.data.solution_id);
             $('#solution-code-length').html(d.data.code_length+' B');
             $('#solution-memory').html('--');
