--- a/application/groups/view/index/index.html
+++ b/application/groups/view/index/index.html
@@ -2,6 +2,15 @@
 {block name='titlepart'}{$lang['allgroup']} :: Welcome to JustOJ{/block}
 {block name="body"}
 <div class="container">
+	<form class="form-horizontal" action="/groups" method="get">
+		<div class="col-sm-5" style="padding-left: 0px">
+			<input class="form-control" style="border-radius: 0px" type="text" name="keyword" value="{$keyword}" placeholder="{$lang.search}: {$lang.name}">
+		</div>
+		<div class="col-sm-2">
+			<button class="btn btn-success"> <span class="glyphicon glyphicon-search"></span> {$lang.search}</button>
+		</div>
+	</form>
+
 	<table class="table table-hover">
 		<thead>
 		<tr>
