docs: some documents updated

--- a/application/extra/view/layout/common.html
+++ b/application/extra/view/layout/common.html
@@ -111,11 +111,11 @@
 {block name="footer"}
 <div style="text-align: center;margin-top:20px;margin-bottom: 20px;">
 	<hr>
-	&copy; 2018&nbsp;&nbsp;<a href="/">JustOJ</a>&nbsp;&nbsp;&nbsp;&nbsp;
+	&copy; 2018&nbsp;<a href="/">JustOJ</a>&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="javascript:;" onclick="$.get('/api/Uilanguage/set_lang?language=cn',function(d){location.reload();},'json');">中文</a>&nbsp;
 	<a href="javascript:;" onclick="$.get('/api/Uilanguage/set_lang?language=en',function(d){location.reload();},'json');">English</a>&nbsp;
-	| Any problems please contact <a href="mailto:ismdeep@qq.com">ismdeep@qq.com</a>
-	| <a href="https://justoj.readthedocs.io" target="_blank">在线说明文档</a>
+	| <a href="mailto:ismdeep@qq.com">ismdeep@qq.com</a>
+	| <a href="https://justoj.readthedocs.io" target="_blank">Online Documentation</a>
 </div>
 {/block}
 
