--- a/application/group/view/tasks/index.html
+++ b/application/group/view/tasks/index.html
@@ -1,6 +1,6 @@
 {extend name='group@layout/group_layout' /}
+{block name='titlepart'}{$lang.tasks} - {$group->name}{/block}
 {block name='body'}
-
 <script src="/static/laydate/laydate.js"></script>
 
 
