--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -10,7 +10,7 @@
 	<div>
 		<h3>{$news->title}</h3>
 		<p>{$news->content}</p>
-		<p>{$news->user->nick}({$news->user_id})</p>
+		<!--<p>{$news->user->nick}({$news->user_id})</p>-->
 	</div>
 
 	{/volist}
