--- a/application/contest/view/problem/index.html
+++ b/application/contest/view/problem/index.html
@@ -70,6 +70,9 @@
 	<div class=content>
 		<p><a href='/problem/search?source={$problem->source}'>{$problem->source}</a></p>
 	</div>
+	<div class="content">
+		<a href="/problem?id={$problem->problem_id}" target="_blank">Original Problem Link</a>
+	</div>
 	<br>
 	<div align="center">
 		<!--功能按钮组 begin-->
