--- a/application/group/view/index/index.html
+++ b/application/group/view/index/index.html
@@ -1,4 +1,5 @@
 {extend name='group@layout/group_layout' /}
+{block name='titlepart'}{$group->name}{/block}
 {block name='body'}
 <div class="container">
 	{$group->description}
