--- a/application/group/view/members/index.html
+++ b/application/group/view/members/index.html
@@ -1,4 +1,5 @@
 {extend name='group@layout/group_layout' /}
+{block name='titlepart'}{$lang.members} - {$group->name}{/block}
 {block name='body'}
 <?php $status_arr = array('未处理','已通过','已踢出'); ?>
 <div class="container">
