--- a/application/group/view/notifications/index.html
+++ b/application/group/view/notifications/index.html
@@ -1,4 +1,5 @@
 {extend name='group@layout/group_layout' /}
+{block name='titlepart'}{$lang.notifications} - {$group->name}{/block}
 {block name='body'}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.9.2/ckeditor.js"></script>
 
