--- a/application/extra/view/layout/common.html
+++ b/application/extra/view/layout/common.html
@@ -114,8 +114,9 @@
 	&copy; 2018&nbsp;<a href="/">JustOJ</a>&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="javascript:;" onclick="$.get('/api/Uilanguage/set_lang?language=cn',function(d){location.reload();},'json');">中文</a>&nbsp;
 	<a href="javascript:;" onclick="$.get('/api/Uilanguage/set_lang?language=en',function(d){location.reload();},'json');">English</a>&nbsp;
-	| <a href="mailto:ismdeep@qq.com">ismdeep@qq.com</a>
-	| <a href="https://justoj.readthedocs.io" target="_blank">Online Documentation</a>
+	| <a href="https://wiki.ismdeep.com/index.php?title=%E6%B1%9F%E8%A5%BF%E7%90%86%E5%B7%A5%E5%A4%A7%E5%AD%A6ACM-ICPC" target="_blank">JxustACM</a>
+	<!--| <a href="mailto:ismdeep@qq.com">ismdeep@qq.com</a>-->
+	| <a href="https://justoj.readthedocs.io" target="_blank">Docs</a>
 </div>
 {/block}
 
