--- a/application/groups/view/index/index.html
+++ b/application/groups/view/index/index.html
@@ -28,22 +28,21 @@
 			<td>
 				{if $group->loginuser_group_join}
 
-				{if 0 == $group->loginuser_group_join->status}
-				{$lang.waiting_for_verify}
-				{/if}
+					{if 0 == $group->loginuser_group_join->status}
+					{$lang.waiting_for_verify}
+					{/if}
 
-				{if 1 == $group->loginuser_group_join->status}
-				<a class="btn btn-sm btn-success" href="/group?id={$group->loginuser_group_join->group_id}">{$lang.enter}</a>
-				{/if}
+					{if 1 == $group->loginuser_group_join->status}
+					<a class="btn btn-sm btn-success" href="/group?id={$group->loginuser_group_join->group_id}">{$lang.enter}</a>
+					{/if}
 
-				{if 2 == $group->loginuser_group_join->status}
-				<span class="label label-danger">{$lang.removed}</span>
-				{/if}
+					{if 2 == $group->loginuser_group_join->status}
+					<span class="label label-danger">{$lang.removed}</span>
+					{/if}
 
-				{if 3 == $group->loginuser_group_join->status}
-				<span class="label label-danger">{$lang.rejected}</span>
-				{/if}
-
+					{if 3 == $group->loginuser_group_join->status}
+					<span class="label label-danger">{$lang.rejected}</span>
+					{/if}
 				{else}
 				<!--<a class="btn btn-sm btn-default" href="javascript:;" onclick="request_join('{$group->id}')">{$lang.join}</a>-->
 				<a class="btn btn-sm btn-default" href="/group/Join?id={$group->id}">{$lang.join}</a>
@@ -56,6 +55,20 @@
 	{$groups->render()}
 </div>
 
+
+<style>
+	.pagination {
+		display: inline-block;
+		padding-left: 0;
+		margin: 0px 0;
+		border-radius: 4px;
+	}
+	.table {
+		width: 100%;
+		max-width: 100%;
+		margin-bottom: 0px;
+	}
+</style>
 
 <script type="text/javascript">
 function request_join(group_id){
