--- a/application/extra/view/themes/mincss/layout/common.html
+++ b/application/extra/view/themes/mincss/layout/common.html
@@ -8,7 +8,7 @@
 	<title>{block name='titlepart'}{$lang['welcome_to_justoj']}{/block}</title>
 	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
 	<link href="/static/mincss/entireframework.min.css" rel="stylesheet" type="text/css">
-	<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+	<script src="//cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 </head>
 <body>
 {if true == $need_edit_profile}
