--- a/application/extra/view/themes/mincss/index.html
+++ b/application/extra/view/themes/mincss/index.html
@@ -7,7 +7,7 @@
 
     <title>Your Page Title</title>
 
-    <link href="//mincss.com/entireframework.min.css" rel="stylesheet" type="text/css">
+    <link href="/static/mincss/entireframework.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <nav class="nav" tabindex="-1" onclick="this.focus()">
