--- a/application/extra/view/themes/mincss/index.html
+++ b/application/extra/view/themes/mincss/index.html
@@ -25,4 +25,9 @@
 <!--<a href="https://oj.ismdeep.com">https://oj.ismdeep.com</a>-->
 <!--</div>-->
 </div>
+<script type="text/javascript">
+    $(function(){
+        alert('test');
+    });
+</script>
 {/block}
