--- a/application/extra/view/themes/mincss/login.html
+++ b/application/extra/view/themes/mincss/login.html
@@ -4,81 +4,54 @@
     <meta charset="UTF-8">
     <title>{$lang['login']} - {$lang['justoj']}</title>
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-    <meta http-equiv="Cache-Control" content="no-siteapp" />
-
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/static/css/font.css">
-    <link rel="stylesheet" href="/static/css/xadmin.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/static/lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/static/js/xadmin.js"></script>
-
+    <link href="/static/mincss/entireframework.min.css" rel="stylesheet" type="text/css">
+    <script src="/static/jquery/1.12.4/jquery.min.js"></script>
 </head>
-<body class="login-bg">
+<body>
 
-<div class="login layui-anim">
-    <div class="message">{$lang['user_login']}</div>
-    <div id="darkbannerwrap"></div>
-
-    <form method="post" class="layui-form" >
-        <input name="username" id="username" placeholder="{$lang.username}"  type="text" lay-verify="required" class="layui-input" >
-        <hr class="hr15">
-        <input name="password" id="password" lay-verify="required" placeholder="{$lang.password}"  type="password" class="layui-input">
-        <hr class="hr15">
-        <input value="{$lang.login}" lay-submit lay-filter="login" style="width:100%;" type="submit">
-        <hr class="hr20" >
-        <p style="text-align: right">
-            <a style="color: blue" href="/">{$lang.home}</a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a style="color: blue" href="/register">{$lang.register}</a>
+<div class="container">
+    <form method="post" class="layui-form" id="login-form" onsubmit="return do_login();">
+        <p>
+            <span class="addon">{$lang.username}</span><input name="username" id="username" placeholder="{$lang.username}"  type="text" lay-verify="required" class="smooth" >
         </p>
-        <p style="text-align: right">
+        <p>
+            <span class="addon">{$lang.password}</span><input name="password" id="password" lay-verify="required" placeholder="{$lang.password}"  type="password" class="smooth">
+        </p>
+        <p>
+            <button class="btn btn-a btn-sm" type="submit">{$lang.login}</button>
+            <span style="color: red" id="error-info"></span>
+        </p>
+        <hr class="hr20" >
+        <p>
+            <a style="color: blue" href="/">{$lang.home}</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a style="color: blue" href="/register">{$lang.register}</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a style="color: blue" href="javascript:" onclick="forgot_password();">{$lang.forgot_password}?</a>
         </p>
     </form>
 </div>
 
-<script>
-    $(function  () {
-        layui.use('form', function(){
-            var form = layui.form;
-            //监听提交
-            form.on('submit(login)', function(data){
-                layer.msg('正在登录', {
-                    icon: 16
-                    ,shade: 0.01
-                });
+<script type="text/javascript">
+    function do_login() {
+        var loginData = {
+            'username': $('#username').val(),
+            'password': $('#password').val()
+        };
+        $.post('/api/login/login',loginData,function(d){
+            if ('success' == d.status) {
+                localStorage.setItem('username', loginData.username);
+                localStorage.setItem('password', loginData.password);
                 setTimeout(function(){
-                    var loginData = {
-                        'username': $('#username').val(),
-                        'password': $('#password').val()
-                    };
-                    $.post('/api/login/login',loginData,function(d){
-                        // layer.closeAll();
-                        if ('success' == d.status) {
-                            localStorage.setItem('username', loginData.username);
-                            localStorage.setItem('password', loginData.password);
-                            // layer.alert(d.msg, {icon: 1},function(){
-                            //     location.href = '{$redirect}';
-                            // });
-                            setTimeout(function(){
-                                location.href = '{$redirect}';
-                            },100);
-                        }else{
-                            layer.msg(d.msg, {icon: 2});
-                        }
-                    });
-                },300);
-                return false;
-            });
-
-
+                    location.href = '{$redirect}';
+                },100);
+            }else{
+                $('#error-info').html(d.msg);
+            }
         });
-    });
+        return false;
+    }
 
     function forgot_password() {
-        layer.alert('忘记密码，请联系任课老师前往后台(用户管理 - 用户管理)进行修改密码。');
+        alert('忘记密码，请联系任课老师前往后台(用户管理 - 用户管理)进行修改密码。');
     }
 
     $(function(){
