--- a/application/extra/view/themes/mincss/contest-status.html
+++ b/application/extra/view/themes/mincss/contest-status.html
@@ -3,24 +3,19 @@
 {block name='body'}
 <div class="container">
 	<form class="form-horizontal" action="/contest/Status" method="get">
-		<div hidden><input type="text" name="id" value="{$contest->contest_id}"></div>
-		<div class="col-sm-2">
-			<input class="form-control" style="border-radius: 0px" type="text" name="run_id" value="{$run_id}" placeholder="{$lang.run_id}">
-		</div>
-		<div class="col-sm-2">
-			<input class="form-control" style="border-radius: 0px" type="text" name="username" value="{$username}" placeholder="{$lang.username}">
-		</div>
-		<div class="col-sm-2">
-			<!--<input class="form-control" style="border-radius: 0px" type="text" name="problem_id" value="{$problem_id}" placeholder="{$lang.problem_id}">-->
-			<select class="form-control" name="problem_id" value="{$problem_id}">
+		<div hidden><input hidden type="text" name="id" value="{$contest->contest_id}"></div>
+		<p>
+			<span class="addon">{$lang.run_id}</span><input class="" type="text" name="run_id" value="{$run_id}">
+			<span class="addon">{$lang.username}</span><input class="" type="text" name="username" value="{$username}">
+
+			<select class="smooth" name="problem_id" value="{$problem_id}">
 				<option value="" {if $result==""}selected{/if}>{$lang.all_problem}</option>
 				{volist name='contest_problems' id='contest_problem'}
 				<option value="{$contest_problem->num}"{if '' != $problem_id && $problem_id == $contest_problem->num} selected{/if}>{$alphabet[$contest_problem->num]}:{$contest_problem->problem->title}</option>
 				{/volist}
 			</select>
-		</div>
-		<div class="col-sm-2">
-			<select class="form-control" style="border-radius: 0px" name="result">
+
+			<select name="result">
 				<option value="" {if $result==""}selected{/if}>{$lang.all_result}</option>
 				<option value="4" {if $result=="4"}selected{/if}>{$lang.result_code_ac}</option>
 				<option value="0" {if $result=="0"}selected{/if}>{$lang.result_code_pending}</option>
@@ -35,18 +30,16 @@
 				<option value="10" {if $result=="10"}selected{/if}>{$lang.result_code_re}</option>
 				<option value="11" {if $result=="11"}selected{/if}>{$lang.result_code_ce}</option>
 			</select>
-		</div>
-		<div class="col-sm-2">
-			<select class="form-control" style="border-radius: 0px" name="language">
+
+			<select name="language">
 				<option value="" {if $language==""}selected{/if}>{$lang.all_language}</option>
 				{volist name='allowed_langs' id='allowed_lang'}
 				<option value="{$allowed_lang.id}" {if $language != '' && $language == $allowed_lang.id}selected{/if}>{$allowed_lang.name}</option>
 				{/volist}
 			</select>
-		</div>
-		<div class="col-sm-2">
-			<button class="btn btn-success">{$lang.submit}</button>
-		</div>
+
+			<button class="btn btn-sm btn-a">{$lang.submit}</button>
+		</p>
 	</form>
 	<br>
 	<hr>
@@ -98,89 +91,4 @@
 	</table>
 	{$solutions->render()}
 </div>
-
-
-<!--显示代码之模态框 begin-->
-<div class="modal fade" id="solutionModal" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog modal-lg" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal">
-					<a href="javascript:void(0)">
-						<i class="fa fa-close"></i>
-					</a>
-				</button>
-				<h5 class="modal-title" id="solutionModalLabel"><a target="_blank">#<span id="solution_id"></span></a>
-				</h5>
-			</div>
-			<div class="modal-body">
-				<div id="info-panel">
-					<table class="table table-reflow">
-						<thead>
-						<tr>
-							<th>{$lang.run_id}</th>
-							<th>{$lang.status}</th>
-							<th>{$lang.code_length}</th>
-							<th>{$lang.memory}</th>
-							<th>{$lang.exe_time}</th>
-							<th>{$lang.language}</th>
-							<th>{$lang.submit_time}</th>
-						</tr>
-						</thead>
-						<tbody>
-						<tr>
-							<td><span id="solution_id_2"></span></td>
-							<td><span id="solution-result"></span></td>
-							<td id="solution-code-length"></td>
-							<td id="solution-memory"></td>
-							<td id="solution-exe-time"></td>
-							<td id="solution-code-language"></td>
-							<td id="solution-submittime"></td>
-						</tr>
-						</tbody>
-					</table>
-				</div>
-				<div id="code-panel">
-					<pre id="solution-source-code" style="padding: 0px;tab-size: 4"></pre>
-				</div>
-				<div id="compile-info-panel" hidden>
-					<pre id="solution-compile-error"></pre>
-				</div>
-				<div class="alert alert-warning" role="alert" id="ce-info" style="display: none"></div>
-			</div>
-		</div>
-	</div>
-</div>
-<!--显示代码之模态框 end-->
-
-
-<script type="text/javascript">
-    function show_solution(id) {
-        $.get('/api/Solution/details?id=' + id, function (d) {
-            console.log(d);
-            $('#solution_id').html(id);
-            $('#solution_id_2').html(id);
-            $('#solution-result').html(d.data.result_text);
-            $('#solution-code-length').html(d.data.code_length);
-            $('#solution-memory').html(d.data.memory + ' B');
-            $('#solution-exe-time').html(d.data.time + ' ms');
-            $('#solution-code-language').html(d.data.language_text);
-            $('#solution-submittime').html(d.data.in_date);
-            // $('#solution-source-code').html(d.data.source_code.source);
-            $('#solution-source-code').html('<code class="'+d.data.language_text+'">'+d.data.source_code.source+'</code>');
-            $('pre code').each(function(i, block) {
-                hljs.highlightBlock(block);
-            });
-            /* 如果是编译错误还要显示编译错误信息 */
-            if ('11' == d.data.result) {
-                $('#solution-compile-error').html(d.data.compile_info.error);
-                $('#compile-info-panel').show();
-            }
-            $('#solutionModal').modal('show');
-        }, 'json');
-    }
-</script>
-
-<link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/atom-one-light.min.css" rel="stylesheet">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 {/block}
