--- a/application/extra/view/themes/mincss/group-tasks.html
+++ b/application/extra/view/themes/mincss/group-tasks.html
@@ -3,7 +3,7 @@
 {block name='body'}
 <div class="container">
 	{if $group->ownner_id == $loginuser->user_id}
-	<button class="btn btn-sm btn-a" type="button" onclick="alert('暂时未提供当前浏览器下发布作业的功能。');">{$lang.add_homework}</button>
+	<button class="btn btn-sm btn-a" type="button" onclick="alert('暂未提供当前浏览器下发布作业的功能。');">{$lang.add_homework}</button>
 	{/if}
 	<table class="table table-hover">
 		<thead>
