--- a/application/extra/view/themes/mincss/problem.html
+++ b/application/extra/view/themes/mincss/problem.html
@@ -18,19 +18,10 @@
 				<span>{$lang.time_limit}: </span>C/C++ {$problem->time_limit} s &nbsp;&nbsp;&nbsp;&nbsp; Java/Python {$problem->time_limit * 3} s &nbsp;&nbsp;&nbsp;&nbsp;
 				<span>{$lang.memory_limit}: </span>{$problem->memory_limit} MB &nbsp;&nbsp;&nbsp;&nbsp;
 				<span>{$lang.accepted}: </span><a href="/status?problem_id={$problem->problem_id}&result=4" target="_blank">{$problem->solved}</a> &nbsp;&nbsp;&nbsp;&nbsp;
-				<span>{$lang.submit}: </span><a href="/status?problem_id={$problem->problem_id}" target="_blank">{$problem->submit}</a>
+				<span>{$lang.submit}: </span><a href="/status?problem_id={$problem->problem_id}" target="_blank">{$problem->submit}</a> &nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="/status?username={$loginuser->user_id}&problem_id={$problem->problem_id}" target="_blank">{$lang.my_status}</a>
 			</div>
 		</div>
-
-		<!--功能按钮组 begin-->
-		{if $loginuser}
-		<a href="/status?username={$loginuser->user_id}&problem_id={$problem->problem_id}" target="_blank" class="btn btn-sm">{$lang.my_status}</a>
-		{/if}
-
-		{if $is_root}
-		<button class="btn btn-sm btn-c" onclick="rejudge_problem({$problem->problem_id})">{$lang.rejudge}</button>
-		{/if}
-		<!--功能按钮组 end-->
 	</div>
 	<h3>{$lang.problem_description}</h3>
 	<div class="content">
@@ -53,5 +44,4 @@
 	<br>
 </div>
 <!--题目内容显示页面 end-->
-
 {/block}
