--- a/application/extra/view/themes/mincss/status.html
+++ b/application/extra/view/themes/mincss/status.html
@@ -32,7 +32,7 @@
                 {/volist}
             </select>
 
-            <button class="btn btn-a btn-sm">{$lang.submit}</button>
+            <button type="submit">{$lang.submit}</button>
         </p>
     </form>
     <br>
