--- a/application/extra/view/themes/mincss/status.html
+++ b/application/extra/view/themes/mincss/status.html
@@ -5,9 +5,9 @@
 
     <form class="" action="/status" method="get">
         <p>
-            <span>{$lang.run_id}</span><input type="text" name="run_id" value="{$run_id}">&nbsp;&nbsp;
-            <span>{$lang.username}</span><input type="text" name="username" value="{$username}">&nbsp;&nbsp;
-            <span>{$lang.problem_id}</span><input type="text" name="problem_id" value="{$problem_id}">&nbsp;&nbsp;
+            <span>{$lang.run_id}:</span><input type="text" name="run_id" value="{$run_id}">&nbsp;&nbsp;
+            <span>{$lang.username}:</span><input type="text" name="username" value="{$username}">&nbsp;&nbsp;
+            <span>{$lang.problem_id}:</span><input type="text" name="problem_id" value="{$problem_id}">&nbsp;&nbsp;
             <select class="form-control" style="border-radius: 0px" name="result">
                 <option value="" {if $result==""}selected{/if}>{$lang.all_result}</option>
                 <option value="4" {if $result=="4"}selected{/if}>{$lang.result_code_ac}</option>
