--- a/application/extra/view/themes/mincss/groups.html
+++ b/application/extra/view/themes/mincss/groups.html
@@ -4,8 +4,8 @@
 <div class="container">
 	<form class="form-horizontal" action="/groups" method="get">
 		<p>
-			<input class="form-control" style="border-radius: 0px" type="text" name="keyword" value="{$keyword}" placeholder="{$lang.search}: {$lang.name}">
-			<button class="btn btn-sm"> <span class="glyphicon glyphicon-search"></span> {$lang.search}</button>
+			<span>{$lang.name}: </span><input type="text" name="keyword" value="{$keyword}">
+			<button>{$lang.search}</button>
 		</p>
 	</form>
 
