--- a/application/extra/view/themes/mincss/contests.html
+++ b/application/extra/view/themes/mincss/contests.html
@@ -12,8 +12,8 @@ $code_arr = array(
 <div class="container">
 	<form class="form-horizontal" action="{$target}" method="get">
 		<p>
-			<span class="addon">{$lang.keyword}: {$lang.title}</span><input class="smooth" style="border-radius: 0px" type="text" name="keyword" value="{$keyword}">
-			<button class="btn btn-sm"> <span class="glyphicon glyphicon-search"></span> {$lang.search}</button>
+			<span>{$lang.title}：</span><input type="text" name="keyword" value="{$keyword}">
+			<button type="submit">{$lang.search}</button>
 		</p>
 	</form>
 
